--- a/.github/workflows/multistage.yml
+++ b/.github/workflows/multistage.yml
@@ -43,7 +43,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: docker.pkg.github.com
-          repository: netology-code/bgo-docker/bank
+          repository: artdark/bgo_docker/bank
           tag_with_ref: true
     
 
